tests/loops/valid/for_decl.amu
main :: () -> s32 {
    a:s32 = 0;

    for (i:s32 = 0; i < 3; i = i + 1)
        a = a + 1;
    return a;
}