tests/loops/invalid/syntax_err_paren_mismatch.amu
main :: () -> s32 {
    for (i:s32 = 2; ))
        a:s32 = 0;
}